--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/custom.css" />
-    <title>KW1C News</title>
+    <title>Bootstrap but cool 😎</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <div class="bg-primary p-5 text-light">
       <div class="container">
-        <h1>Koning Willem 1 Nieuws</h1>
+        <h1>Bootstrap but cool 😎</h1>
       </div>
     </div>
     <div class="container w-100 mt-3 mb-5">
       <div class="row g-3">
         <div class="col-12 col-lg-8">
-          <div class="bg-secondary border border-3 p-3">
+          <div class="bg-secondary  p-3">
             <h1>Title 1</h1>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-4">
-          <div class="bg-secondary p-3 border border-3">
+          <div class="bg-secondary p-3 ">
             <h1>Title 2</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
@@ -58,7 +58,7 @@
       </div>
       <div class="row g-3 mt-0">
         <div class="col-12 col-lg-4">
-          <div class="bg-secondary p-3 border border-3">
+          <div class="bg-secondary p-3 ">
             <h1>Title 3</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-12 col-lg-8">
-          <div class="bg-secondary p-3 border border-3">
+          <div class="bg-secondary p-3 ">
             <h1>Title 4</h1>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia
@@ -100,7 +100,7 @@
       </div>
       <div class="row g-3 mt-0">
         <div class="col-12 col-sm-6 order-sm-1 order-lg-1 col-lg-3">
-          <div class="bg-secondary p-3 border border-3">
+          <div class="bg-secondary p-3 ">
             <h1>Title 5</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
@@ -112,7 +112,7 @@
           </div>
         </div>
         <div class="col-12 order-sm-3 order-lg-2 col-lg-6">
-          <div class="bg-secondary p-3 border border-3">
+          <div class="bg-secondary p-3 ">
             <h1>Title 6</h1>
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem
@@ -130,7 +130,7 @@
           </div>
         </div>
         <div class="col-12 col-sm-6 order-sm-2 order-lg-3 col-lg-3">
-          <div class="bg-secondary p-3 border border-3 ">
+          <div class="bg-secondary p-3  ">
             <h1>Title 7</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
